--- a/tournaments/latenightlegs.html
+++ b/tournaments/latenightlegs.html
@@ -114,24 +114,24 @@
                  </ul>
                  <p class="group-details">Group D</p>
                  <ul class="matchup">
-                    <li class="team team-top name-details"><a href="https://reddit.com/jg09ts" target="_blank">Alice Eve<span class="score">&nbsp;</span></a></li>
+                    <li class="loser team-top name-details"><a href="https://reddit.com/jg09ts" target="_blank">Alice Eve<span class="score">&nbsp;</span></a></li>
                     <li class="team team-top name-details"><a href="https://reddit.com/jg09ts" target="_blank">Taylor Swift<span class="score">&nbsp;</span></a></li>
-                    <li class="team team-top name-details"><a href="https://reddit.com/jg09ts" target="_blank">Bar Refaeli<span class="score">&nbsp;</span></a></li>
+                    <li class="loser team-top name-details"><a href="https://reddit.com/jg09ts" target="_blank">Bar Refaeli<span class="score">&nbsp;</span></a></li>
                  </ul>
                  <ul class="matchup">
-                    <li class="team team-top name-details"><a href="https://reddit.com/jg09vz" target="_blank">Kate Mara<span class="score">&nbsp;</span></a></li>
+                    <li class="loser team-top name-details"><a href="https://reddit.com/jg09vz" target="_blank">Kate Mara<span class="score">&nbsp;</span></a></li>
                     <li class="team team-top name-details"><a href="https://reddit.com/jg09vz" target="_blank">Nina Dobrev<span class="score">&nbsp;</span></a></li>
-                    <li class="team team-top name-details"><a href="https://reddit.com/jg09vz" target="_blank">Kelly Rohrbach<span class="score">&nbsp;</span></a></li>
+                    <li class="loser team-top name-details"><a href="https://reddit.com/jg09vz" target="_blank">Kelly Rohrbach<span class="score">&nbsp;</span></a></li>
                  </ul>
                  <ul class="matchup">
-                    <li class="team team-top name-details"><a href="https://reddit.com/jg09xm" target="_blank">Amanda Seyfried<span class="score">&nbsp;</span></a></li>
-                    <li class="team team-top name-details"><a href="https://reddit.com/jg09xm" target="_blank">Cobie Smulders<span class="score">&nbsp;</span></a></li>
+                    <li class="loser team-top name-details"><a href="https://reddit.com/jg09xm" target="_blank">Amanda Seyfried<span class="score">&nbsp;</span></a></li>
+                    <li class="loser team-top name-details"><a href="https://reddit.com/jg09xm" target="_blank">Cobie Smulders<span class="score">&nbsp;</span></a></li>
                     <li class="team team-top name-details"><a href="https://reddit.com/jg09xm" target="_blank">Michelle Keegan<span class="score">&nbsp;</span></a></li>
                  </ul>
                  <ul class="matchup">
                     <li class="team team-top name-details"><a href="https://reddit.com/jg09zg" target="_blank">Evangeline Lilly<span class="score">&nbsp;</span></a></li>
-                    <li class="team team-top name-details"><a href="https://reddit.com/jg09zg" target="_blank">Lauren Conrad<span class="score">&nbsp;</span></a></li>
-                    <li class="team team-top name-details"><a href="https://reddit.com/jg09zg" target="_blank">Sarah Shahi<span class="score">&nbsp;</span></a></li>
+                    <li class="loser team-top name-details"><a href="https://reddit.com/jg09zg" target="_blank">Lauren Conrad<span class="score">&nbsp;</span></a></li>
+                    <li class="loser team-top name-details"><a href="https://reddit.com/jg09zg" target="_blank">Sarah Shahi<span class="score">&nbsp;</span></a></li>
                  </ul>
              </div>
              <!-- END ROUND ONE -->
@@ -162,12 +162,12 @@
                     <li class="team team-top name-details"><a href="javascript:void(0);" target="_blank">Aubrey Plaza<span class="score">&nbsp;</span></a></li>
                  </ul>
                  <ul class="matchup">
-                    <li class="team team-top name-details"><a href="javascript:void(0);" target="_blank">&nbsp;<span class="score">&nbsp;</span></a></li>
-                    <li class="team team-top name-details"><a href="javascript:void(0);" target="_blank">&nbsp;<span class="score">&nbsp;</span></a></li>
+                    <li class="team team-top name-details"><a href="javascript:void(0);" target="_blank">Taylor Swift<span class="score">&nbsp;</span></a></li>
+                    <li class="team team-top name-details"><a href="javascript:void(0);" target="_blank">Kate Mara<span class="score">&nbsp;</span></a></li>
                  </ul>
                  <ul class="matchup">
-                    <li class="team team-top name-details"><a href="javascript:void(0);" target="_blank">&nbsp;<span class="score">&nbsp;</span></a></li>
-                    <li class="team team-top name-details"><a href="javascript:void(0);" target="_blank">&nbsp;<span class="score">&nbsp;</span></a></li>
+                    <li class="team team-top name-details"><a href="javascript:void(0);" target="_blank">Michelle Keegan<span class="score">&nbsp;</span></a></li>
+                    <li class="team team-top name-details"><a href="javascript:void(0);" target="_blank">Evangeline Lilly<span class="score">&nbsp;</span></a></li>
                  </ul>  
              </div>
              <!-- END ROUND TWO -->
@@ -299,24 +299,24 @@
                 <div class="round-details">Round 1<br/></div>
                 <p class="group-details">Group E</p>
                 <ul class="matchup">
-                    <li class="team team-top name-details"><a href="javascript:void(0);" target="_blank">Jennifer Connelly<span class="score">&nbsp;</span></a></li>
-                    <li class="team team-top name-details"><a href="javascript:void(0);" target="_blank">Sandra Bullock<span class="score">&nbsp;</span></a></li>
-                    <li class="team team-top name-details"><a href="javascript:void(0);" target="_blank">Lucy Hale<span class="score">&nbsp;</span></a></li>
+                    <li class="team team-top name-details"><a href="https://reddit.com/jhu1ka" target="_blank">Jennifer Connelly<span class="score">&nbsp;</span></a></li>
+                    <li class="team team-top name-details"><a href="https://reddit.com/jhu1ka" target="_blank">Sandra Bullock<span class="score">&nbsp;</span></a></li>
+                    <li class="team team-top name-details"><a href="https://reddit.com/jhu1ka" target="_blank">Lucy Hale<span class="score">&nbsp;</span></a></li>
                 </ul>
                 <ul class="matchup">
-                    <li class="team team-top name-details"><a href="javascript:void(0);" target="_blank">Emilia Clarke<span class="score">&nbsp;</span></a></li>
-                    <li class="team team-top name-details"><a href="javascript:void(0);" target="_blank">Marisa Tomei<span class="score">&nbsp;</span></a></li>
-                    <li class="team team-top name-details"><a href="javascript:void(0);" target="_blank">Lucy Liu<span class="score">&nbsp;</span></a></li>
+                    <li class="team team-top name-details"><a href="https://reddit.com/jhu1ll" target="_blank">Emilia Clarke<span class="score">&nbsp;</span></a></li>
+                    <li class="team team-top name-details"><a href="https://reddit.com/jhu1ll" target="_blank">Marisa Tomei<span class="score">&nbsp;</span></a></li>
+                    <li class="team team-top name-details"><a href="https://reddit.com/jhu1ll" target="_blank">Lucy Liu<span class="score">&nbsp;</span></a></li>
                 </ul>
                 <ul class="matchup">
-                    <li class="team team-top name-details"><a href="javascript:void(0);" target="_blank">Brie Larson<span class="score">&nbsp;</span></a></li>
-                    <li class="team team-top name-details"><a href="javascript:void(0);" target="_blank">Natalie Dormer<span class="score">&nbsp;</span></a></li>
-                    <li class="team team-top name-details"><a href="javascript:void(0);" target="_blank">Christina Ricci<span class="score">&nbsp;</span></a></li>
+                    <li class="team team-top name-details"><a href="https://reddit.com/jhu1ng" target="_blank">Brie Larson<span class="score">&nbsp;</span></a></li>
+                    <li class="team team-top name-details"><a href="https://reddit.com/jhu1ng" target="_blank">Natalie Dormer<span class="score">&nbsp;</span></a></li>
+                    <li class="team team-top name-details"><a href="https://reddit.com/jhu1ng" target="_blank">Christina Ricci<span class="score">&nbsp;</span></a></li>
                 </ul>
                 <ul class="matchup">
-                    <li class="team team-top name-details"><a href="javascript:void(0);" target="_blank">Amber Heard<span class="score">&nbsp;</span></a></li>
-                    <li class="team team-top name-details"><a href="javascript:void(0);" target="_blank">Zoey Deutch<span class="score">&nbsp;</span></a></li>
-                    <li class="team team-top name-details"><a href="javascript:void(0);" target="_blank">Shailene Woodley<span class="score">&nbsp;</span></a></li>
+                    <li class="team team-top name-details"><a href="https://reddit.com/jhu1om" target="_blank">Amber Heard<span class="score">&nbsp;</span></a></li>
+                    <li class="team team-top name-details"><a href="https://reddit.com/jhu1om" target="_blank">Zoey Deutch<span class="score">&nbsp;</span></a></li>
+                    <li class="team team-top name-details"><a href="https://reddit.com/jhu1om" target="_blank">Shailene Woodley<span class="score">&nbsp;</span></a></li>
                 </ul>
                 <p class="group-details">Group F</p>
                 <ul class="matchup">
