--- a/tournaments/latenightlegs.html
+++ b/tournaments/latenightlegs.html
@@ -163,7 +163,7 @@
                  </ul>
                  <ul class="matchup">
                     <li class="team team-top name-details"><a href="javascript:void(0);" target="_blank">Taylor Swift<span class="score">&nbsp;</span></a></li>
-                    <li class="team team-top name-details"><a href="javascript:void(0);" target="_blank">Kate Mara<span class="score">&nbsp;</span></a></li>
+                    <li class="team team-top name-details"><a href="javascript:void(0);" target="_blank">Nina Dobrev<span class="score">&nbsp;</span></a></li>
                  </ul>
                  <ul class="matchup">
                     <li class="team team-top name-details"><a href="javascript:void(0);" target="_blank">Michelle Keegan<span class="score">&nbsp;</span></a></li>
