--- a/tournaments/latenightlegs.html
+++ b/tournaments/latenightlegs.html
@@ -262,12 +262,12 @@
              <div class="round round-two current">
                 <div class="round-details">Round 2<br/></div>
                 <ul class="matchup">
-                    <li class="team team-top name-details"><a href="javascript:void(0);" target="_blank">&nbsp;<span class="score">&nbsp;</span></a></li>
-                    <li class="team team-top name-details"><a href="javascript:void(0);" target="_blank">&nbsp;<span class="score">&nbsp;</span></a></li>
+                    <li class="team team-top name-details"><a href="javascript:void(0);" target="_blank">Sandra Bullock<span class="score">&nbsp;</span></a></li>
+                    <li class="team team-top name-details"><a href="javascript:void(0);" target="_blank">Marisa Tomei<span class="score">&nbsp;</span></a></li>
                 </ul>
                 <ul class="matchup">
-                    <li class="team team-top name-details"><a href="javascript:void(0);" target="_blank">&nbsp;<span class="score">&nbsp;</span></a></li>
-                    <li class="team team-top name-details"><a href="javascript:void(0);" target="_blank">&nbsp;<span class="score">&nbsp;</span></a></li>
+                    <li class="team team-top name-details"><a href="javascript:void(0);" target="_blank">Brie Larson<span class="score">&nbsp;</span></a></li>
+                    <li class="team team-top name-details"><a href="javascript:void(0);" target="_blank">Shailene Woodley<span class="score">&nbsp;</span></a></li>
                 </ul>
                 <ul class="matchup">
                     <li class="team team-top name-details"><a href="javascript:void(0);" target="_blank">&nbsp;<span class="score">&nbsp;</span></a></li>
@@ -299,45 +299,45 @@
                 <div class="round-details">Round 1<br/></div>
                 <p class="group-details">Group E</p>
                 <ul class="matchup">
-                    <li class="team team-top name-details"><a href="https://reddit.com/jhu1ka" target="_blank">Jennifer Connelly<span class="score">&nbsp;</span></a></li>
+                    <li class="loser team-top name-details"><a href="https://reddit.com/jhu1ka" target="_blank">Jennifer Connelly<span class="score">&nbsp;</span></a></li>
                     <li class="team team-top name-details"><a href="https://reddit.com/jhu1ka" target="_blank">Sandra Bullock<span class="score">&nbsp;</span></a></li>
-                    <li class="team team-top name-details"><a href="https://reddit.com/jhu1ka" target="_blank">Lucy Hale<span class="score">&nbsp;</span></a></li>
+                    <li class="loser team-top name-details"><a href="https://reddit.com/jhu1ka" target="_blank">Lucy Hale<span class="score">&nbsp;</span></a></li>
                 </ul>
                 <ul class="matchup">
-                    <li class="team team-top name-details"><a href="https://reddit.com/jhu1ll" target="_blank">Emilia Clarke<span class="score">&nbsp;</span></a></li>
+                    <li class="loser team-top name-details"><a href="https://reddit.com/jhu1ll" target="_blank">Emilia Clarke<span class="score">&nbsp;</span></a></li>
                     <li class="team team-top name-details"><a href="https://reddit.com/jhu1ll" target="_blank">Marisa Tomei<span class="score">&nbsp;</span></a></li>
-                    <li class="team team-top name-details"><a href="https://reddit.com/jhu1ll" target="_blank">Lucy Liu<span class="score">&nbsp;</span></a></li>
+                    <li class="loser team-top name-details"><a href="https://reddit.com/jhu1ll" target="_blank">Lucy Liu<span class="score">&nbsp;</span></a></li>
                 </ul>
                 <ul class="matchup">
                     <li class="team team-top name-details"><a href="https://reddit.com/jhu1ng" target="_blank">Brie Larson<span class="score">&nbsp;</span></a></li>
-                    <li class="team team-top name-details"><a href="https://reddit.com/jhu1ng" target="_blank">Natalie Dormer<span class="score">&nbsp;</span></a></li>
-                    <li class="team team-top name-details"><a href="https://reddit.com/jhu1ng" target="_blank">Christina Ricci<span class="score">&nbsp;</span></a></li>
+                    <li class="loser team-top name-details"><a href="https://reddit.com/jhu1ng" target="_blank">Natalie Dormer<span class="score">&nbsp;</span></a></li>
+                    <li class="loser team-top name-details"><a href="https://reddit.com/jhu1ng" target="_blank">Christina Ricci<span class="score">&nbsp;</span></a></li>
                 </ul>
                 <ul class="matchup">
-                    <li class="team team-top name-details"><a href="https://reddit.com/jhu1om" target="_blank">Amber Heard<span class="score">&nbsp;</span></a></li>
-                    <li class="team team-top name-details"><a href="https://reddit.com/jhu1om" target="_blank">Zoey Deutch<span class="score">&nbsp;</span></a></li>
+                    <li class="loser team-top name-details"><a href="https://reddit.com/jhu1om" target="_blank">Amber Heard<span class="score">&nbsp;</span></a></li>
+                    <li class="loser team-top name-details"><a href="https://reddit.com/jhu1om" target="_blank">Zoey Deutch<span class="score">&nbsp;</span></a></li>
                     <li class="team team-top name-details"><a href="https://reddit.com/jhu1om" target="_blank">Shailene Woodley<span class="score">&nbsp;</span></a></li>
                 </ul>
                 <p class="group-details">Group F</p>
                 <ul class="matchup">
-                    <li class="team team-top name-details"><a href="javascript:void(0);" target="_blank">Anne Hathaway<span class="score">&nbsp;</span></a></li>
-                    <li class="team team-top name-details"><a href="javascript:void(0);" target="_blank">Maria Sharapova<span class="score">&nbsp;</span></a></li>
-                    <li class="team team-top name-details"><a href="javascript:void(0);" target="_blank">Jessica Chastain<span class="score">&nbsp;</span></a></li>
+                    <li class="team team-top name-details"><a href="https://reddit.com/jlib8q" target="_blank">Anne Hathaway<span class="score">&nbsp;</span></a></li>
+                    <li class="team team-top name-details"><a href="https://reddit.com/jlib8q" target="_blank">Maria Sharapova<span class="score">&nbsp;</span></a></li>
+                    <li class="team team-top name-details"><a href="https://reddit.com/jlib8q" target="_blank">Jessica Chastain<span class="score">&nbsp;</span></a></li>
                 </ul>
                 <ul class="matchup">
-                    <li class="team team-top name-details"><a href="javascript:void(0);" target="_blank">Megan Fox<span class="score">&nbsp;</span></a></li>
-                    <li class="team team-top name-details"><a href="javascript:void(0);" target="_blank">Vanessa Hudgens<span class="score">&nbsp;</span></a></li>
-                    <li class="team team-top name-details"><a href="javascript:void(0);" target="_blank">Brittany Snow<span class="score">&nbsp;</span></a></li>
+                    <li class="team team-top name-details"><a href="https://reddit.com/jlibaa" target="_blank">Megan Fox<span class="score">&nbsp;</span></a></li>
+                    <li class="team team-top name-details"><a href="https://reddit.com/jlibaa" target="_blank">Vanessa Hudgens<span class="score">&nbsp;</span></a></li>
+                    <li class="team team-top name-details"><a href="https://reddit.com/jlibaa" target="_blank">Brittany Snow<span class="score">&nbsp;</span></a></li>
                 </ul>
                 <ul class="matchup">
-                    <li class="team team-top name-details"><a href="javascript:void(0);" target="_blank">Katy Perry<span class="score">&nbsp;</span></a></li>
-                    <li class="team team-top name-details"><a href="javascript:void(0);" target="_blank">Scarlett Johansson<span class="score">&nbsp;</span></a></li>
-                    <li class="team team-top name-details"><a href="javascript:void(0);" target="_blank">Zoe Saldana<span class="score">&nbsp;</span></a></li>
+                    <li class="team team-top name-details"><a href="https://reddit.com/jlie8u" target="_blank">Katy Perry<span class="score">&nbsp;</span></a></li>
+                    <li class="team team-top name-details"><a href="https://reddit.com/jlie8u" target="_blank">Scarlett Johansson<span class="score">&nbsp;</span></a></li>
+                    <li class="team team-top name-details"><a href="https://reddit.com/jlie8u" target="_blank">Zoe Saldana<span class="score">&nbsp;</span></a></li>
                 </ul>
                 <ul class="matchup">
-                    <li class="team team-top name-details"><a href="javascript:void(0);" target="_blank">Rachel McAdams<span class="score">&nbsp;</span></a></li>
-                    <li class="team team-top name-details"><a href="javascript:void(0);" target="_blank">Keira Knightley<span class="score">&nbsp;</span></a></li>
-                    <li class="team team-top name-details"><a href="javascript:void(0);" target="_blank">Priyanka Chopra<span class="score">&nbsp;</span></a></li>
+                    <li class="team team-top name-details"><a href="https://reddit.com/jlibd4" target="_blank">Rachel McAdams<span class="score">&nbsp;</span></a></li>
+                    <li class="team team-top name-details"><a href="https://reddit.com/jlibd4" target="_blank">Keira Knightley<span class="score">&nbsp;</span></a></li>
+                    <li class="team team-top name-details"><a href="https://reddit.com/jlibd4" target="_blank">Priyanka Chopra<span class="score">&nbsp;</span></a></li>
                 </ul>
                 <p class="group-details">Group G</p>
                 <ul class="matchup">
