--- a/tournaments/wc2020.html
+++ b/tournaments/wc2020.html
@@ -33,7 +33,7 @@
        <div class="hero-wrap">
             <img src="https://i.imgur.com/OhLhKRE.png" alt="Girl in a jacket" style="width:100%">
             <p class="intro" id="intro">CelebBattles</p>
-            <h1 id="headline">World Cup</h1>
+            <h1 id="headline">World Cup1</h1>
             <p class="year"><i class="fa fa-star"></i> 2020 <i class="fa fa-star"></i></p>
             <img src="download.png" alt="Girl in a jacket" style="width:75px;height:85px;padding-bottom:10px">
        </div>
