--- a/tournaments/wc2021.html
+++ b/tournaments/wc2021.html
@@ -11,13 +11,13 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="stylesheet" href="celebworldcup2020.css">
+    <link rel="stylesheet" href="wc2021.css">
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
     <link href='https://fonts.googleapis.com/css?family=Holtwood+One+SC' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Kaushan+Script|Herr+Von+Muellerhoff' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Abel' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Istok+Web|Roboto+Condensed:700' rel='stylesheet' type='text/css'>
-    <title>CelebBattles Celeb World Cup 2020</title>
+    <title>CelebBattles World Cup 2021</title>
     <link rel="icon" type="image/png" href="favicon.png"/>
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
@@ -34,7 +34,7 @@
             <img src="https://i.imgur.com/OhLhKRE.png" alt="Girl in a jacket" style="width:100%">
             <p class="intro" id="intro">CelebBattles</p>
             <h1 id="headline">World Cup</h1>
-            <p class="year"><i class="fa fa-star"></i> 2020 <i class="fa fa-star"></i></p>
+            <p class="year"><i class="fa fa-star"></i> 2021 <i class="fa fa-star"></i></p>
             <img src="download.png" alt="Girl in a jacket" style="width:75px;height:85px;padding-bottom:10px">
        </div>
     </header>
