rename, add black bg logo

--- a/tournaments/wc2021.html
+++ b/tournaments/wc2021.html
@@ -35,7 +35,7 @@
             <p class="intro" id="intro">CelebBattles</p>
             <h1 id="headline">World Cup</h1>
             <p class="year"><i class="fa fa-star"></i> 2021 <i class="fa fa-star"></i></p>
-            <img src="download.png" alt="Girl in a jacket" style="width:75px;height:85px;padding-bottom:10px">
+            <img src="download-b.png" alt="Girl in a jacket" style="width:75px;height:85px;padding-bottom:10px">
        </div>
     </header>
 
