--- a/tournaments/wc2021.html
+++ b/tournaments/wc2021.html
@@ -31,7 +31,7 @@
  <body>
     <header class="hero">
        <div class="hero-wrap">
-            <img src="https://i.imgur.com/OhLhKRE.png" alt="Girl in a jacket" style="width:100%">
+            <img src="https://i.imgur.com/qTpnNii.png" alt="flags-banner" style="width:100%">
             <p class="intro" id="intro">CelebBattles</p>
             <h1 id="headline">World Cup</h1>
             <p class="year"><i class="fa fa-star"></i> 2021 <i class="fa fa-star"></i></p>
