added more countries

--- a/tournaments/wc2021.html
+++ b/tournaments/wc2021.html
@@ -39,12 +39,7 @@
        </div>
     </header>
 
-    <div class="slideshow-container">
-
-        <div class="mySlides">
-          <img src="https://i.imgur.com/oxcg6Zz.png" style="width:100%">
-        </div>
-        
+    <div class="slideshow-container"> 
         <div class="mySlides">
           <img src="https://i.imgur.com/bnsLPtZ.png" style="width:100%">
         </div>
@@ -60,6 +55,22 @@
         <div class="mySlides">
             <img src="https://i.imgur.com/LTrc7tn.png" style="width:100%">
         </div>
+
+        <div class="mySlides">
+          <img src="https://i.imgur.com/oxcg6Zz.png" style="width:100%">
+        </div>
+
+        <div class="mySlides">
+          <img src="https://i.imgur.com/rtSLhMu.png" style="width:100%">
+        </div>
+
+        <div class="mySlides">
+          <img src="https://i.imgur.com/EY4KFK8.png" style="width:100%">
+        </div>
+
+        <div class="mySlides">
+          <img src="https://i.imgur.com/j9ajh5J.png" style="width:100%">
+        </div>
         
         <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
         <a class="next" onclick="plusSlides(1)">&#10095;</a>
@@ -73,7 +84,10 @@
         <span class="dot" onclick="currentSlide(2)"></span> 
         <span class="dot" onclick="currentSlide(3)"></span> 
         <span class="dot" onclick="currentSlide(4)"></span> 
-        <span class="dot" onclick="currentSlide(5)"></span> 
+        <span class="dot" onclick="currentSlide(5)"></span>
+        <span class="dot" onclick="currentSlide(6)"></span>
+        <span class="dot" onclick="currentSlide(7)"></span>
+        <span class="dot" onclick="currentSlide(8)"></span>
     </div>
 
     <script>
