--- a/tournaments/wc2021.html
+++ b/tournaments/wc2021.html
@@ -35,7 +35,11 @@
             <p class="intro" id="intro">CelebBattles</p>
             <h1 id="headline">World Cup</h1>
             <p class="year"><i class="fa fa-star"></i> 2021 <i class="fa fa-star"></i></p>
-            <img src="download-b.png" alt="Girl in a jacket" style="width:75px;height:85px;padding-bottom:10px">
+            <div class="row">
+              <div class="col text-right"> <img src="download-b.png" alt="Girl in a jacket" style="width:75px;height:85px;padding-bottom:10px"></div>
+              <div class="col text-left d-flex flex-wrap align-items-center"> <img src="trophy.png" alt="Girl in a jacket" style="width:50px;height:60px;padding-bottom:10px"></div>
+            </div>
+           
        </div>
     </header>
 
