--- a/tournaments/wc2021.html
+++ b/tournaments/wc2021.html
@@ -33,16 +33,15 @@
        <div class="hero-wrap">
             <img src="https://i.imgur.com/K226s1c.png" alt="flags-banner" style="width:100%">
             <p class="intro" id="intro">CelebBattles</p>
-            <h1 id="headline">World Cup</h1>
-            <p class="year"><i class="fa fa-star"></i> 2021 <i class="fa fa-star"></i></p>
-            <img src="download-b.png" alt="Girl in a jacket" style="width:75px;height:85px;padding-bottom:10px">
+            <h1 id="headline">World Cup 2021</h1>
+            <img class="cb-logo" src="download-b.png" alt="logo">
        </div>
     </header>
 
 
     <div class="slideshow-container"> 
         <div class="mySlides">
-          <img src="https://i.imgur.com/bnsLPtZ.png" style="width:100%">
+          <img src="https://i.imgur.com/bnsLPtZ.png" title="Team USA: Alexandra Daddario, Scarlett Johansson, Victoria Justice, Taylor Swift"style="width:100%">
         </div>
         
         <div class="mySlides">
@@ -93,7 +92,7 @@
     <br>
 
     <div class="container">
-      <p style="color: #ff2f2f; font-size: 2em; font-family: 'Holtwood One SC', serif">Preliminary Rounds</p>
+      <p class="round-title">Preliminary Rounds</p>
       <div class="row justify-content-center">
         <div class="col-sm">
           <table class="table">
