added knockout stage

--- a/tournaments/wc2021.html
+++ b/tournaments/wc2021.html
@@ -92,9 +92,10 @@
     <br>
 
     <div class="container">
-      <p class="round-title">Preliminary Rounds</p>
+      <p class="round-title">Group Stage</p>
       <div class="row justify-content-center">
         <div class="col-sm">
+          <p class="table-title">Group A</p>
           <table class="table">
             <thead>
               <tr>
@@ -133,6 +134,7 @@
           </table>
         </div>
         <div class="col-sm">
+          <p class="table-title">Group B</p>
           <table class="table text-center">
             <thead>
               <tr>
@@ -173,6 +175,7 @@
       </div>
       <div class="row">
         <div class="col-sm">
+          <p class="table-title">Group C</p>
           <table class="table text-center">
             <thead>
               <tr>
@@ -211,6 +214,7 @@
           </table>
         </div>
         <div class="col-sm">
+          <p class="table-title">Group D</p>
           <table class="table text-center">
             <thead>
               <tr>
@@ -250,6 +254,74 @@
         </div>
       </div>
     </div>
+
+    <br>
+
+    <!-- Knockout bracket -->
+    <div class="container">
+      <p class="round-title">Knockout Stage</p>
+      <section id="bracket">
+        <div class="container">
+          <div class="split split-one">
+            <div class="round quarterfinals current">
+              <div class="round-details">Quarterfinals<br/></div>
+              <ul class="matchup">
+                  <li class="team team-top name-details"><a href="javascript:void(0);" target="_blank">&nbsp;<span class="score">&nbsp;</span></a></li>
+                  <li class="team team-top name-details"><a href="javascript:void(0);" target="_blank">&nbsp;<span class="score">&nbsp;</span></a></li>
+              </ul>
+              <ul class="matchup">
+                  <li class="team team-top name-details"><a href="javascript:void(0);" target="_blank">&nbsp;<span class="score">&nbsp;</span></a></li>
+                  <li class="team team-top name-details"><a href="javascript:void(0);" target="_blank">&nbsp;<span class="score">&nbsp;</span></a></li>
+              </ul>
+           </div>
+          </div>
+
+          <div class="champion">
+            <div class="semis-l current">
+               <div class="round-details">Semifinals 1 <br/></div>
+               <ul class ="matchup championship">
+                   <li class="team team-top name-details"><a href="javascript:void(0);" target="_blank">&nbsp;<span class="score">&nbsp;</span></a></li>
+                   <li class="team team-top name-details"><a href="javascript:void(0);" target="_blank">&nbsp;<span class="score">&nbsp;</span></a></li>
+               </ul>
+            </div>
+            <div class="final current">
+               <i class="fa fa-trophy"></i>
+               <div class="round-details">Grand Finale <br/></div>
+               <ul class ="matchup championship">
+                   <li class="team team-top name-details"><a href="javascript:void(0);" target="_blank">&nbsp;<span class="score">&nbsp;</span></a></li>
+                   <li class="team team-top name-details"><a href="javascript:void(0);" target="_blank">&nbsp;<span class="score">&nbsp;</span></a></li>
+               </ul>
+            </div>
+            <div class="semis-r current">
+               <div class="round-details">Semifinals 2 <br/></div>
+               <ul class ="matchup championship">
+                   <li class="team team-top name-details"><a href="javascript:void(0);" target="_blank">&nbsp;<span class="score">&nbsp;</span></a></li>
+                   <li class="team team-top name-details"><a href="javascript:void(0);" target="_blank">&nbsp;<span class="score">&nbsp;</span></a></li>
+               </ul>
+            </div>
+          </div>
+
+          <div class="split split-two">
+            <div class="round quarterfinals current">
+              <div class="round-details">Quarterfinals<br/></div>
+              <ul class="matchup">
+                  <li class="team team-top name-details"><a href="javascript:void(0);" target="_blank">&nbsp;<span class="score">&nbsp;</span></a></li>
+                  <li class="team team-top name-details"><a href="javascript:void(0);" target="_blank">&nbsp;<span class="score">&nbsp;</span></a></li>
+              </ul>
+              <ul class="matchup">
+                  <li class="team team-top name-details"><a href="javascript:void(0);" target="_blank">&nbsp;<span class="score">&nbsp;</span></a></li>
+                  <li class="team team-top name-details"><a href="javascript:void(0);" target="_blank">&nbsp;<span class="score">&nbsp;</span></a></li>
+              </ul>
+           </div>  
+          </div>
+
+        </div>
+      </section>
+    </div>
+
+    <section class="share">
+      <p>&nbsp;</p>
+    </section>
 
     <!-- Slideshow script -->
     <script>
