--- a/tournaments/wc2021.html
+++ b/tournaments/wc2021.html
@@ -32,9 +32,9 @@
     <header class="hero">
        <div class="hero-wrap">
             <img src="https://i.imgur.com/K226s1c.png" alt="flags-banner" style="width:100%">
-            <p class="intro" id="intro">CelebBattles</p>
-            <h1 id="headline">World Cup 2021</h1>
-            <img class="cb-logo" src="download-b.png" alt="logo">
+            <a href="https://reddit.com/r/CelebBattles" style="text-decoration: none;"><p class="intro" id="intro">CelebBattles</p></a>
+            <a href="https://reddit.com/r/CelebBattles" style="text-decoration: none; color: inherit;"><h1 id="headline">World Cup 2021</h1></a>
+            <img class="cb-logo" src="download-b.png" alt="logo"/>
        </div>
     </header>
 
